提交配置修改

--- a/_config.yml
+++ b/_config.yml
@@ -79,3 +79,5 @@ theme: next
 deploy:
   type: git
   repo: https://github.com/jiaoyun286/jiaoyun286.github.io.git
+  branch: master
+  message: "Site updated: {{ now('YYYY-MM-DD HH:mm:ss') }}"
