--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://yundeveloper.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -86,3 +86,9 @@ admin:
   username: yunjiao
   password_hash: $2a$10$cNlmxYTUVkZVYny6uq7rp.W4oYR9lmi0.riCAnTaG/oasn2Xx0exS
   secret: jiaoyun286@126.com
+  
+# 自动生成sitemap
+sitemap: 
+  path: sitemap.xml
+baidusitemap: 
+  path: baidusitemap.xml
