--- a/_config.yml
+++ b/_config.yml
@@ -92,3 +92,10 @@ sitemap:
   path: sitemap.xml
 baidusitemap: 
   path: baidusitemap.xml
+  
+baidu_url_submit:
+  count: 100 # 提交最新的一个链接
+  host: www.yundeveloper.top # 在百度站长平台中注册的域名
+  token: tkr4rU6yDKxzSKBv # 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  path: baidu_urls.txt # 文本文档的地址， 新链接会保存在此文本文档里
+  
